crates/biome_html_parser/tests/html_specs/ok/svelte/snippet_default_values.svelte
{#snippet greeting(name = 'World')}
  <p>Hello, {name}!</p>
{/snippet}
