crates/biome_html_parser/tests/html_specs/error/svelte/snippet_missing_close.svelte
{#snippet greeting()}
  <p>Hello!</p>
